# OpenGLTest

./: CMakeLists.txt  Makefile
assets/: shader.frag
include/: indexBuffer.hpp  readFile.hpp  shader.hpp  vertexArray.hpp  vertexBuffer.hpp
include/Rendering/: indexBuffer.hpp  vertexArray.hpp
src/: indexBuffer.cpp  main.cpp  readFile.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
